# paper_engine

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ui.py
others/: app.drawio
src/: main.py
src/paper_engine/: app.py  meta.py  utils.py  workers.py
src/paper_engine/components/: __init__.py  search.py  show.py  sidebar.py  widget.py
src/paper_engine/downloader/: __init__.py
src/paper_engine/engine/: __init__.py  baidu.py  engine.py  ieee.py  scihub.py
src/paper_engine/qss/: mainapp.css  paperengine.css  search.css  show.css  sidebar.css
src/test/: ieee.py  scihub.py
test/: ieee.py  scihub.py
