[tool.poetry]
name = "paper-engine"
version = "0.1.0"
description = ""
authors = ["Crayon <karontjl112@gmail.com>"]
readme = "README.md"
packages = [{include = "paper_engine"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
PySide6 = "^6.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
